                       User-Visible WebAuth Changes

WebAuth 4.5.4 (unreleased)

    Fix handling of non-password session factors.  Requiring any session
    factor other than password, for users using password authentication,
    resulted in the user being repeatedly presented with the password
    login page because mod_webkdc did not notice the password session
    factor and continue to asking for a multifactor authentication.  The
    logic is still not entirely correct for users who use non-password
    initial authentication factors; that will be fixed in a subsequent
    release.

    Improve handling of required initial factors when users have a way to
    establish initial credentials that don't include password.  mod_webkdc
    now returns a forced login error instead of multifactor required if
    the user's initial factors don't satisfy the request and don't contain
    a password factor.

    If a password authentication is required in order to obtain a Kerberos
    authenticator, return that error in preference to a multifactor
    required error.  This ensures that the password authentication page
    happens first, preserving expected user page flow, and fixes various
    errors and loops caused by detecting this problem after the successful
    second factor authentication.

    mod_webkdc now requires that the return URL in a request token be
    absolute URL and not contain any non-ASCII characters.  The latter
    check avoids error messages and later problems with WebLogin template
    processing.

    Fix the WebLogin replay detection logic to not attempt to trigger
    during password changes, which do not have request tokens.

    Fix logging of mod_webkdc <requestTokenRequest> failures.

    Fix the webauth/webkdc.h header prototype for webauth_user_validate to
    correctly allow the user state parameter to be NULL.

    Log (at the info level) whenever mod_webkdc ignores expired